--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -1,2 +1,9 @@
 $icon-font-path: '~bootstrap-sass/assets/fonts/bootstrap/';
 @import '~bootstrap-sass/assets/stylesheets/bootstrap';
+
+
+// .status {
+//   display: inline-grid;
+//   border: 10px ;
+//   width:40%;
+// }
