working on user handlebars to display the user searched by their name

--- a/assets/scripts/templates/statusdisplay.handlebars
+++ b/assets/scripts/templates/statusdisplay.handlebars
@@ -1,4 +1,5 @@
 
 <div id ='tog' data-id="{{status.id}}">
-<p name="[status][status]"> <small> status:{{status.status}}</small></p>
+
+<p name="[status][status]"> <strong> status:{{status.status}}</strong></p>
 </div>
