getting the user table by handlebars now i have to work on showing all the users of same name for this I think backend show function needs updation

--- a/assets/scripts/templates/displayUsers.handlebars
+++ b/assets/scripts/templates/displayUsers.handlebars
@@ -1,7 +1,8 @@
-{{#each users as |user|}}
+
 <tr data-id="{{user.id}}">
+  console.log(data-id="{{user.id}}")
   <td name="[credentials][name]">{{user.name}}</td>
+  console.log("[credentials][name]")
   <td><button id="aboutUser{{user.id}}" class="btn btn-default aboutUser">ABOUT</button></td>
-  <td><button id="followUser{{user.id}}" class="btn btn-default followUser">FOLLOW</button></td>
+  <td><button id="followUser{{user.id}}" class="btn btn-default followUser">Add-Friend</button></td>
 </tr>
-{{/each}}
